Prevent poster IDs from wordwrapping
Poster IDs still linebreak between "ID:" and the ID, this corrects that without having to replace the space inbetween with an &nbsp; nonbreaking space.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -912,6 +912,7 @@ pre {
 
 .poster_id {
   cursor: pointer;
+  white-space:nowrap;
 }
 .poster_id:hover {
   color: #800000!important;
